--- a/professores/templates/professores/aulas_tabela.html
+++ b/professores/templates/professores/aulas_tabela.html
@@ -66,10 +66,10 @@
     </div>
   </div>
 
-  <script>
+  {% comment %} <script>
     function carrega_pagina() {};
     window.onload = carrega_pagina
-  </script>
+  </script> {% endcomment %}
 
   {% include "edicoes_ajax.html" with tabela="Aulas" %}
 
