--- a/professores/templates/professores/orientadores_tabela.html
+++ b/professores/templates/professores/orientadores_tabela.html
@@ -42,10 +42,10 @@
         </table>
     </div>
 
-    <script>
+    {% comment %} <script>
       function carrega_pagina() {};
       window.onload = carrega_pagina
-    </script>
+    </script> {% endcomment %}
 
   </div>
 
