--- a/administracao/templates/administracao/relatorio_projetos.html
+++ b/administracao/templates/administracao/relatorio_projetos.html
@@ -18,41 +18,42 @@
 {% endblock %}
 
 {% block content %}
-    
-    <span class="titulo">Projetos Disponíveis {{configuracao.ano}}.{{configuracao.semestre}}</span>
 
-    {% if projetos %}
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en" style="display: none;">{{ titulo.en }}</span>
+  </span>
 
-        {% for projeto in projetos %} 
+  <h3>Projetos Disponíveis {{configuracao.ano}}.{{configuracao.semestre}}</h3>
 
-          <p style="page-break-before: always"></p>
+  {% for projeto in projetos %} 
 
-          {% if projeto.titulo_final and projeto.titulo_final != projeto.proposta.titulo %}
-            <style>
-                h4 {display: inline;}
-            </style>
-            <h4>Título: {{projeto.titulo_final}}</h4>
-            <small> <br>&nbsp;&nbsp;&nbsp;&nbsp;Título original da proposta: {{projeto.proposta.titulo}}</small><br>
-          {% else %}
-            <h4>Título: {{projeto.get_titulo}}</h4><br>
-          {% endif %}
+    <p style="page-break-before: always"></p>
 
-          <strong>Descrição da Proposta:</strong> {{ projeto.proposta.descricao|linebreaks }}
-          <strong>Expectativas de resultados/entregas :</strong> {{ projeto.proposta.expectativas|linebreaks }}
-          <strong>Recursos a serem disponibilizados aos Estudantes :</strong> {{ projeto.proposta.recursos|linebreaks }}<br>
-          <strong>Outras observações :</strong> {{ projeto.proposta.observacoes|linebreaks }}<br>
-
-          <hr>
-
-          <h5>Organização: {{ projeto.organizacao.nome }}</h5>
-          <strong>endereço:</strong> {{ projeto.organizacao.endereco|linebreaks }}
-          <strong>website:</strong> <a href="{{ projeto.organizacao.website|add_http }}"> {{ projeto.organizacao.website }} </a>        
-          <hr class="striped-border">
-
-        {% endfor %}
-  
-        {% else %}
-      <p>Não existem projetos disponíveis.</p>
+    {% if projeto.titulo_final and projeto.titulo_final != projeto.proposta.titulo %}
+      <style>
+          h4 {display: inline;}
+      </style>
+      <h4>Título: {{projeto.titulo_final}}</h4>
+      <small> <br>&nbsp;&nbsp;&nbsp;&nbsp;Título original da proposta: {{projeto.proposta.titulo}}</small><br>
+    {% else %}
+      <h4>Título: {{projeto.get_titulo}}</h4><br>
     {% endif %}
+
+    <strong>Descrição da Proposta:</strong> {{ projeto.proposta.descricao|linebreaks }}
+    <strong>Expectativas de resultados/entregas :</strong> {{ projeto.proposta.expectativas|linebreaks }}
+    <strong>Recursos a serem disponibilizados aos Estudantes :</strong> {{ projeto.proposta.recursos|linebreaks }}<br>
+    <strong>Outras observações :</strong> {{ projeto.proposta.observacoes|linebreaks }}<br>
+
+    <hr>
+
+    <h5>Organização: {{ projeto.organizacao.nome }}</h5>
+    <strong>endereço:</strong> {{ projeto.organizacao.endereco|linebreaks }}
+    <strong>website:</strong> <a href="{{ projeto.organizacao.website|add_http }}"> {{ projeto.organizacao.website }} </a>        
+    <hr class="striped-border">
+
+  {% empty %}
+    <p>Não existem projetos disponíveis.</p>
+  {% endfor %}
 
 {% endblock %}
