--- a/professores/templates/professores/banca_avaliar.html
+++ b/professores/templates/professores/banca_avaliar.html
@@ -19,9 +19,9 @@
 {% block content %}
 
   <span class="titulo">
-    <span lang="pt">Formulário de Avaliação de Bancas</span>
-    <span lang="en">Evaluation Committee Form</span>
-  </span>  
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
+  </span>
 
   {% if mensagem %}
   <span class="red-bold">{{mensagem|safe|linebreaks}}</span><br>
