--- a/projetos/templates/projetos/mostra_feedback.html
+++ b/projetos/templates/projetos/mostra_feedback.html
@@ -17,10 +17,16 @@
 
 {% block content %}
 
-  <span class="titulo">Feedback de Organizações Parceiras</span>
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en" style="display: none;">{{ titulo.en }}</span>
+  </span>
 
   <div class="form-group row mt-4" style="max-width: 700px;">
-    <label for="nome" class="col-sm-2 col-form-label">Nome</label>
+    <label for="nome" class="col-sm-2 col-form-label">
+      <span lang="pt">Nome</span>
+      <span lang="en" style="display: none;">Name</span>
+    </label>
     <div class="col-sm-10">
       <input type="text" class="form-control" id="nome" name="nome" value="{{feedback.nome}}" readonly>
     </div>
@@ -32,7 +38,10 @@
     </div>
   </div>
   <div class="form-group row" style="max-width: 700px;">
-    <label for="empresa" class="col-sm-2 col-form-label">Empresa</label>
+    <label for="empresa" class="col-sm-2 col-form-label">
+      <span lang="pt">Organização</span>
+      <span lang="en" style="display: none;">Organization</span>
+    </label>
     <div class="col-sm-10">
       <input type="text" class="form-control" id="empresa" name="empresa" value="{{feedback.empresa}}" readonly>
     </div>
@@ -96,5 +105,6 @@
 
   </script>
 
+  {% include "linguas.html" %}
 
 {% endblock %}
