--- a/projetos/templates/projetos/reembolso_pedir.html
+++ b/projetos/templates/projetos/reembolso_pedir.html
@@ -32,7 +32,10 @@
 
 {% block content %}
 
-  <span class="titulo">Formulário de Reembolso</span>
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en" style="display: none;">{{ titulo.en }}</span>
+  </span>
 
   <form method="post" id="reembolsoform" enctype="multipart/form-data">
     {% csrf_token %}
@@ -85,4 +88,7 @@
     de carreiras para de fato iniciar o processo de reembolso.
     
   </form>
+
+  {% include "linguas.html" %}
+  
 {% endblock %}
