--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -170,7 +170,7 @@
 
                 {% comment %} Banca Intermediária {% endcomment %}
                   <td class="text-center" style="white-space: nowrap;">
-                    <a class="imprimir" href="{% url 'conceitos_obtidos' projeto.id %}"
+                    <a class="imprimir" href="{% url 'resultado_bancas' projeto.id %}"
                       {% if banca_intermediaria.nota_texto %}
                         data-toggle="tooltip" data-html="true" animation="true" title="{{ banca_intermediaria.conceito|safe }}">
                         {{ banca_intermediaria.nota_texto|safe }}
@@ -182,7 +182,7 @@
 
                   {% comment %} Banca Final {% endcomment %}
                   <td class="text-center" style="white-space: nowrap;">
-                    <a class="imprimir" href="{% url 'conceitos_obtidos' projeto.id %}"
+                    <a class="imprimir" href="{% url 'resultado_bancas' projeto.id %}"
                       {% if banca_final.nota_texto %}
                         data-toggle="tooltip" data-html="true" animation="true" title="{{ banca_final.conceito|safe }}">
                         {{ banca_final.nota_texto|safe }}
@@ -194,7 +194,7 @@
 
                   {% comment %} Banca Falconi {% endcomment %}
                   <td class="text-center" style="white-space: nowrap;">
-                    <a class="imprimir" href="{% url 'conceitos_obtidos' projeto.id %}"
+                    <a class="imprimir" href="{% url 'resultado_bancas' projeto.id %}"
                       {% if banca_falconi.nota_texto %}
                         data-toggle="tooltip" data-html="true" animation="true" title="{{ banca_falconi.avaliadores|safe }}">
                         {{ banca_falconi.nota_texto|safe }}
